--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,13 @@
-# === ОБЯЗАТЕЛЬНО ЗАМЕНИТЕ ЭТИ ПАРАМЕТРЫ ===
-LOCAL_IP=192.168.1.50               # IP сервера в локальной сети (или локальное имя хоста)
-SEAFILE_ADMIN_EMAIL=admin@example.com
-SEAFILE_ADMIN_PASSWORD=ChangeMe123
-MYSQL_ROOT_PASSWORD=ChangeDBPass123
-SEAFILE_TIME_ZONE=Europe/Moscow
+# === Domain & Let's Encrypt ===
+SEAFILE_DOMAIN=example.com
+LETSENCRYPT_EMAIL=admin@example.com
 
-# Хостнейм, который будет записан в конфиг Seafile и в сертификат (обычно тот же LOCAL_IP)
-SEAFILE_SERVER_HOSTNAME=192.168.1.50
+# === Seafile admin bootstrap ===
+SEAFILE_ADMIN_EMAIL=you@example.com
+SEAFILE_ADMIN_PASSWORD=ChangeMe123!
 
-# Порт, на котором будет доступен HTTPS-прокси nginx
-HTTPS_PORT=8443
+# === Database root password ===
+DB_ROOT_PASS=MyStrongMariaDBRootPass
+
+# === Optional ===
+TIME_ZONE=Europe/Berlin
