--- a/nginx/seafile.conf
+++ b/nginx/seafile.conf
@@ -1,1 +1,50 @@
+# NGINX as reverse proxy in front of Seafile (Dockerized)
+# Proxies:
+#   - /         -> Seahub (http://seafile:8000)
+#   - /seafhttp -> Fileserver (http://seafile:8082)
+# NOTES:
+#   * Increase client_max_body_size for large uploads
+#   * WebSocket upgrades for event/notifications
 
+server {
+    listen 80 default_server;
+    server_name _;
+
+    # Adjust for your needs
+    client_max_body_size 2G;
+    proxy_read_timeout 3600s;
+    proxy_connect_timeout 75s;
+    proxy_send_timeout 3600s;
+
+    # Common proxy headers
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        ''      close;
+    }
+
+    location /seafhttp {
+        rewrite ^/seafhttp(.*)$ $1 break;
+        proxy_pass         http://seafile:8082;
+        proxy_http_version 1.1;
+        proxy_set_header   Host $host;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Proto $scheme;
+        proxy_connect_timeout 3600s;
+        proxy_read_timeout    3600s;
+        proxy_send_timeout    3600s;
+    }
+
+    location / {
+        proxy_pass         http://seafile:8000;
+        proxy_http_version 1.1;
+        proxy_set_header   Host $host;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Proto $scheme;
+        proxy_set_header   Upgrade $http_upgrade;
+        proxy_set_header   Connection $connection_upgrade;
+    }
+
+    location /media {
+        alias /shared/seafile/seahub/media;
+    }
+}
