--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,5 @@ SEAFILE_SERVER_PROTOCOL=http
 TIME_ZONE=UTC
 INIT_SEAFILE_ADMIN_EMAIL=admin@example.com
 INIT_SEAFILE_ADMIN_PASSWORD=Passw0rd!
+# Let's Encrypt
+LETSENCRYPT_EMAIL=admin@example.com
