--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,11 +17,6 @@ services:
     ]
     volumes:
       - ${SEAFILE_MYSQL_VOLUME}:/var/lib/mysql
-    healthcheck:
-      test: ["CMD-SHELL", "mysqladmin ping -h 127.0.0.1 -uroot -p${INIT_SEAFILE_MYSQL_ROOT_PASSWORD} || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
 
   redis:
     image: redis:7
@@ -32,26 +27,15 @@ services:
       - TZ=${TIME_ZONE}
     volumes:
       - redis-data:/data
-    healthcheck:
-      test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD}", "PING"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
 
   seafile:
     image: seafileltd/seafile-mc:12.0.14
     container_name: seafile
     depends_on:
-      db:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
+      - db
+      - redis
     restart: unless-stopped
-    ports:
-      - "8000:8000"   # seahub
-      - "8082:8082"   # fileserver
     environment:
-      # DB
       - SEAFILE_MYSQL_DB_HOST=db
       - SEAFILE_MYSQL_DB_PORT=3306
       - SEAFILE_MYSQL_DB_USER=${SEAFILE_MYSQL_DB_USER}
@@ -59,42 +43,40 @@ services:
       - SEAFILE_MYSQL_DB_CCNET_DB_NAME=${SEAFILE_MYSQL_DB_CCNET_DB_NAME}
       - SEAFILE_MYSQL_DB_SEAFILE_DB_NAME=${SEAFILE_MYSQL_DB_SEAFILE_DB_NAME}
       - SEAFILE_MYSQL_DB_SEAHUB_DB_NAME=${SEAFILE_MYSQL_DB_SEAHUB_DB_NAME}
-      # Cache via Redis
       - CACHE_PROVIDER=redis
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - REDIS_PASSWORD=${REDIS_PASSWORD}
-      # Core
       - JWT_PRIVATE_KEY=${JWT_PRIVATE_KEY}
       - SEAFILE_SERVER_HOSTNAME=${SEAFILE_SERVER_HOSTNAME}
-      - SEAFILE_SERVER_PROTOCOL=${SEAFILE_SERVER_PROTOCOL}
+      - SEAFILE_SERVER_PROTOCOL=https
       - TIME_ZONE=${TIME_ZONE}
       - INIT_SEAFILE_ADMIN_EMAIL=${INIT_SEAFILE_ADMIN_EMAIL}
       - INIT_SEAFILE_ADMIN_PASSWORD=${INIT_SEAFILE_ADMIN_PASSWORD}
     volumes:
       - ${SEAFILE_VOLUME}:/shared
-    healthcheck:
-      test: ["CMD-SHELL", "curl -fsSL http://127.0.0.1:8000/health/ || exit 1"]
-      interval: 15s
-      timeout: 5s
-      retries: 10
 
   nginx:
     image: nginx:1.27
     container_name: seafile-nginx
     depends_on:
-      seafile:
-        condition: service_healthy
+      - seafile
     restart: unless-stopped
     ports:
       - "80:80"
+      - "443:443"
     volumes:
       - ./nginx/seafile.conf:/etc/nginx/conf.d/default.conf:ro
-    healthcheck:
-      test: ["CMD-SHELL", "wget -qO- http://127.0.0.1/ || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      - ./certs:/etc/letsencrypt:ro
+
+  certbot:
+    image: certbot/certbot:latest
+    container_name: seafile-certbot
+    volumes:
+      - ./certs:/etc/letsencrypt
+      - ./nginx/www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew --webroot -w /var/www/certbot; sleep 12h & wait $${!}; done'"
+    restart: unless-stopped
 
 volumes:
   redis-data:
