--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,7 @@ INIT_SEAFILE_ADMIN_EMAIL=admin@example.com
 INIT_SEAFILE_ADMIN_PASSWORD=Passw0rd!
 # Let's Encrypt
 LETSENCRYPT_EMAIL=admin@example.com
+
+
+# Local IP
+LOCAL_IP=127.0.0.1
