--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -1,1 +1,75 @@
+user  nginx;
+worker_processes  auto;
 
+events {
+    worker_connections  1024;
+}
+
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
+    sendfile        on;
+    keepalive_timeout  65;
+    server_tokens off;
+
+    client_max_body_size  ${CLIENT_MAX_BODY_SIZE};
+
+    # HTTP -> HTTPS
+    server {
+        listen 80;
+        listen [::]:80;
+        server_name ${SEAFILE_SERVER_HOSTNAME};
+
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    # HTTPS
+    server {
+        listen 443 ssl http2;
+        listen [::]:443 ssl http2;
+        server_name ${SEAFILE_SERVER_HOSTNAME};
+
+        ssl_certificate     /etc/letsencrypt/live/${SEAFILE_SERVER_HOSTNAME}/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/${SEAFILE_SERVER_HOSTNAME}/privkey.pem;
+        include /etc/nginx/options-ssl-nginx.conf;
+
+        # Seahub (Django)
+        location / {
+            proxy_pass         http://seafile:80;
+            proxy_set_header   Host              $host;
+            proxy_set_header   X-Forwarded-Proto https;
+            proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Real-IP         $remote_addr;
+            proxy_read_timeout  3600s;
+            proxy_send_timeout  3600s;
+        }
+
+        # File server
+        location /seafhttp {
+            rewrite ^/seafhttp(.*)$ $1 break;
+            proxy_pass         http://seafile:8082;
+            proxy_set_header   Host              $host;
+            proxy_set_header   X-Forwarded-Proto https;
+            proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Real-IP         $remote_addr;
+            client_max_body_size ${CLIENT_MAX_BODY_SIZE};
+            proxy_read_timeout  3600s;
+            proxy_send_timeout  3600s;
+        }
+
+        # Static (опционально можно проксировать)
+        location /media {
+            proxy_pass http://seafile:80/media;
+        }
+
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+    }
+}
